infrastructure2.yml
Description:  This template deploys a VPC, with a public subnet in one Availability Zone. It deploys an internet gateway, with a default route on the public subnets.



Parameters:

  VpcCirdBlock:
    Type: String
    Default: 172.31.0.0/16
    Description: Please enter your VPC CidrBlock 

  VpcTagKey:
    Type: String
    Default: Key
    Description: Please enter your VPC Tag Key

  VpcTagValue:
    Type: String
    Default: Value
    Description: Please enter your VPC Tag Value

  RTTagKey:
    Type: String
    Default: Key
    Description: Please enter your Route table Tag Key

  RTTagValue:
    Type: String
    Default: Value
    Description: Please enter your Route table Tag Value

  SubnetTagKey:
    Type: String
    Default: Key
    Description: Please enter your Subnet Tag Key

  SubnetTagValue:
    Type: String
    Default: Value
    Description: Please enter your Subnet Tag Value

  IGTagKey:
    Type: String
    Default: Key
    Description: Please enter your InternetGateway Tag Key

  IGTagValue:
    Type: String
    Default: Value
    Description: Please enter your InternetGateway Tag Value

  SubnetAZ:
    Type: String
    Default: "us-east-1a"
    Description: Please enter your Subnet AZ

  SubnetCirdBlock:
    Type: String
    Default: 172.31.0.0/24
    Description: Please enter your Subnet CidrBlock

  EC2ImageId:
    Type: String
    Default: ami-026b57f3c383c2eec
    Description: Please enter the image id 

  EC2InstanceType:
    Type: String
    Default: t2.micro
    Description: Please enter instance type

  SGTagKey:
    Type: String
    Default: Key
    Description: Please enter your SecurityGroup Tag key

  SGTagValue:
    Type: String
    Default: Value
    Description: Please enter your SecurityGroup Tag Value


Resources:

  VPC001:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 
        Ref: VpcCirdBlock
      EnableDnsHostnames: True
      EnableDnsSupport: True
      Tags:
        - Key: 
            Ref: VpcTagKey
          Value: 
            Ref: VpcTagValue 

  PublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: 
        Ref: VPC001
      AvailabilityZone:
        Ref: SubnetAZ
      CidrBlock:
        Ref: SubnetCirdBlock
      MapPublicIpOnLaunch: True
      Tags:
        - Key: 
            Ref: SubnetTagKey
          Value: 
            Ref: SubnetTagValue 

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: 
            Ref: IGTagKey
          Value: 
            Ref: IGTagValue 

  GatewayToInternet:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: 
        Ref: VPC001
      InternetGatewayId:
        Ref: InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: VPC001
      Tags:
        - Key: 
            Ref: RTTagKey
          Value: 
            Ref: RTTagValue 

  PublicRoute1:   # Public route table has direct routing to IGW:
    Type: AWS::EC2::Route
    DependsOn: GatewayToInternet
    Properties:
      RouteTableId:
        Ref: PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: InternetGateway

  EC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Ref: EC2ImageId
      AvailabilityZone:
        Ref: SubnetAZ
      InstanceType:
        Ref: EC2InstanceType
      NetworkInterfaces:
        - AssociatePublicIpAddress: True
          DeviceIndex: 0
          GroupSet:
            - Ref: SecurityGroup
          SubnetId: 
            Ref: PublicSubnet     
      UserData:
        Fn::Base64: 
          !Sub |
            #!/bin/bash
            yum update -y
            yum -y install httpd
            systemctl enable httpd
            systemctl start httpd.service

  PublicSubnetARouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId:
        Ref: PublicSubnet
      RouteTableId:
        Ref: PublicRouteTable

  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SecurityGroup
      VpcId: 
        Ref: VPC001
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: 
            Ref: SGTagKey
          Value: 
            Ref: SGTagValue
